# strap

./: .gitignore  README.md  TRAINING.md  data.py  main.py  pyproject.toml  requirements.txt  run_training.py  train.py
models/: criterion.py  strap.py
models/backbones/: mae.py
models/backbones/utils/: mask.py  pos_embed.py
