[project]
name = "strap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=22.0.0",
    "isort>=5.0.0",
    "numpy>=1.21.0",
    "pytest>=7.0.0",
    "rich>=13.0.0",
    "tensordict>=0.1.0",
    "timm>=1.0.16",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "wandb>=0.15.0",
]
